<resources>
    <string name="app_name">Adwait</string>
    <string name="facebook_app_id">305162560131651</string>
    <string name="razor_pay_id">rzp_test_eeV0VCOUPe1NAQ</string>
    <string name="razor_pay_secret">747XB7gReAFKvUZ1WVYK7xRR</string>
    <string name="loading">Please wait...</string>
    <string name="loading2">Please wait while Elves are setting\nup your account...</string>
    <string name="rupees">₹</string>
    <string name="close">Close</string>
    <string name="ngoname">Ngo</string>
    <string name="wishitem">Wish Item</string>
    <string name="help1"> Get 100% visibility on your money.\nAnytime, Anywhere, Any Device</string>
    <string name="help2">Discover the joy of satellite parenting by\ntracking child's well being in Adwait\'s way.</string>
    <string name="help3">Ensuring Happiness with our Unique\nPrescription, Arbitration and Prevention program</string>
    <string name="help4">Get control of all your contributions on fingertips.\nAll bills and their break-ups at a single place.</string>
    <string name="reg_hint">We are APPsolutely happy!\n Let us know whos is our new Elve.</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_num">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="reff_code">Referral Code</string>
    <string name="referral_code">I have a referral code</string>
    <string name="ref_code_hint">Please enter your happiness code</string>
    <string name="congrats_heading">Congratulations!</string>
    <string name="congrats_1"><![CDATA[Thank you %s for beign our Elev!<br>Your are eligible to be<br>an exclusive member of the <b>Hx Club.</b><br>We have credited 100 Happiness Points<br>in your account.
<br><br><b>#LimitlessHappiness</b>]]></string>
    <string name="done">Done</string>
    <string name="verify_hint"><![CDATA[Just one more step!\nWe believe in genuine Happiness]]></string>
    <string name="otp_to_mobile">Please enter OTP sent to your phone</string>
    <string name="resend">Resend</string>
    <string name="verify_mail">Please verify your e-mail</string>
    <string name="mail_resend">Click to resend link</string>
    <string name="forgot_1">Forgot your login details?</string>
    <string name="forgot_2">Get help signing in</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have a happiness account ?</string>
    <string name="password_reset">Please choose how you want to reset your password</string>
    <string name="via_phone">Via Phone</string>
    <string name="via_email">Via Email</string>
    <string name="enter_details">Enter details</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_password">Reset password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="email_success">Reset link has been sent to your email. Please login after password reset.</string>
    <string name="mobile_reset_success">Password has been reset. Login with new password</string>
    <string name="otp_sent">An OTP has been sent to your mobile number.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello, Guest</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_menu">Menu</string>
    <string name="action_profile">Profile</string>
    <string name="swipe_to_contribute">Swipe to Contribute</string>
    <string name="sign_in_dash">Please sign to access this info</string>
    <string name="exit">Yes, quit</string>
    <string name="exit_message">Hey Elve %s.\n\nDo You Really want to leave the world of happiness?</string>
    <string-array name="navigation_items">
        <item>Home</item>
        <item>My Mentee</item>
        <item>Be The Change</item>
        <item>Wish Corner</item>
        <item><![CDATA[H<sup>x</sup> Club]]></item>
        <item>My Contributions</item>
        <item>Our Partners</item>
        <item>Refer Happiness</item>
        <item>Our Cause</item>
        <item>Contact Us</item>
    </string-array>
    <string name="h_club"><![CDATA[H<sup>x</sup> Club]]></string>
    <string name="my_mentee">My Mentee</string>
    <string name="wish_cornor">Wish Corner</string>
    <string name="our_partner">Our Partners</string>
    <string name="be_the_change">Be the Change</string>
    <string name="our_cause">Our Causes</string>
    <string name="fund_raised_msg">Fund Raised: ₹%s of ₹ %s/%s</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="already_elve">Already an Elve!</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_contribution">Contribution this month:</string>
    <string name="profile_btn1">My Mentee</string>
    <string name="profile_btn2">My Contributions</string>
    <string name="profile_btn3">Reset Password</string>
    <string name="profile_t_c">Terms &amp; Condition</string>
    <string name="profile_contact">Contact</string>
    <string name="profile_faq">FAQ</string>
    <string name="profile_save">Save</string>
    <string name="profile_edit">Update details</string>
    <string name="subject_hint">Please Select a Subject</string>
    <string name="contact_header">Contact Us</string>
    <string name="contact_sub_header">Contact Us Through</string>
    <string name="contact_email">Email:</string>
    <string name="contact_care">Customer Care:</string>
    <string name="contact_sub_header2">Customer Support Form</string>
    <string name="name">Name</string>
    <string name="email_or_number">Email/Number</string>
    <string name="message">Message</string>
    <string-array name="subjects">
        <item>Please select a subject</item>
        <item>Unable to make Payment</item>
        <item>Need more info about My Mentee</item>
        <item>Willing to donate for more</item>
        <item>Others</item>
    </string-array>
    <string name="hx_heading">Happiness priority pass</string>
    <string name="hx_hint1">Welcome to the world of infinite happiness</string>
    <string name="hx_hint2">Start your Journey with Infinity</string>
    <string name="discover_benifits">Discover the benefits</string>
    <string name="click_here">Click here</string>
    <string name="point1">Invitations to local and regional level events as chapter head</string>
    <string name="point2">Access to premium HX goodies</string>
    <string name="point3">Special feature in Hx talk series</string>
    <string name="point4">Stand a chance to win the F IH F contest</string>
    <string name="referral_header">Refer and Earn</string>
    <string name="referral_t_c">Invite your friends to Adwait and share happiness together. For each friend you invite,
        both you and your friend will earn happiness points. T &amp; c
    </string>
    <string name="c_referral_code">Referral Code:</string>
    <string name="copy">Copy</string>
    <string name="c_share_via">Share via</string>
    <string name="your_earning">Your Earnings</string>
    <string name="c_refer_hint">Happiness points earned by you</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="others">Others</string>
    <string name="referral_message">Hey!! Use my code %s to sign up and get happiness points.</string>
    <string name="quotes1">I alone cannot change the world, but \nI can cast a stone across the water to create many
        ripples \n- Mother Teresa
    </string>
    <string name="bethechange_hashtag">#BeTheChange</string>
    <string name="apply_for_vol">Apply for volunteering</string>
    <string name="be_our_elve">Be your our Elves</string>
    <string name="pledge_your_bday">Pledge Your Birthday</string>
    <string name="organise_event">Organise an Event</string>
    <string name="elve_talk">Elve Talk</string>
    <string name="campus_ambassdor">Be our Campus Ambassador</string>
    <string name="our_head">Become our Area Head</string>
    <string name="day_out">Adwait\'s Day Out</string>
    <string name="pledge_header">Pledge your birthday</string>
    <string name="pledge_header_ques">What is Pledge your birthday?</string>
    <string name="pledge_hint">It’s easy. Instead of gifts, ask for donations.</string>
    <string name="date_of_bday">Date of Birth</string>
    <string name="pledge_content1"></string>
    <string name="pledge_content2"></string>
    <string name="pledge_content3"></string>
    <string name="congrats">Congratulations!</string>
    <string name="step_closer">You are a step closer to spreading happiness</string>
    <string name="tell_us_about_u">Tell us about your event!</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event_type">Event Type</string>
    <string name="event_desc">Description</string>
    <string name="add_media">Add Media</string>
    <string name="add_image">Add an event image</string>
    <string name="privacy_settings">Privacy Setting</string>
    <string name="event1">Public Event</string>
    <string name="event2">Private Event</string>
    <string name="other_details">Other Details</string>
    <string name="check1">Members can invite others</string>
    <string name="check2">Members can auto check-in</string>
    <string name="check3">Members can bring gift</string>
    <string name="attach_docs">Attach Documents</string>
    <string name="upload_docs">Upload documents for member to see</string>
    <string name="choose_file">Choose Files</string>
    <string name="campus_header">Be our Campus Ambassador</string>
    <string name="phone_no">Phone Number</string>
    <string name="adwait_header">Adwait\'s day out</string>
    <string name="pledge_bday_msg">Thankyou for pledging your birthday. We will together celebrate your birthday in Adwait\'s way.</string>
    <string-array name="area_of_interest">
        <item>Select your area of interest</item>
        <item>Computers</item>
        <item>Management</item>
        <item>Others</item>
    </string-array>
    <string-array name="area_of_expert">
        <item>Select your area of expert</item>
        <item>Computers</item>
        <item>Management</item>
        <item>Others</item>
    </string-array>
    <string name="net_banking">Net Banking</string>
    <string name="debit_card">Debit/Credit Card</string>
    <string name="donation_hint">Just because he has enough for now,\nthat doesn\'t mean he has enough for future.
    </string>
    <string name="hint_with_name">Contribute towards %s\'s future</string>
    <string name="paytm">Paytm</string>
    <string name="google_pay">Google Pay</string>
    <string name="phone_pe">Phone Pe</string>
    <string name="upi">Upi</string>
    <string name="top_contributers">Top Contributors</string>
    <string name="checkbox">Contribute monthly and share happiness hassle free.</string>
    <string name="fund_raised">Fund Raised:</string>
    <string name="your_contribution">Your contribution this month: ₹%s</string>
</resources>