<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forget_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <!--Option layout-->
        <LinearLayout
            android:id="@+id/options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/password_reset"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/via_phone"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_primary_color_bg"
                android:text="@string/via_phone"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

            <Button
                android:id="@+id/via_Email"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_primary_color_bg"
                android:text="@string/via_email"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

        <!--Mobile layout-->
        <LinearLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/enter_details"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/darker_gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_num"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="10"
                    android:textColor="@color/app_text"
                    android:textColorHint="@android:color/holo_red_dark"
                    android:textSize="@dimen/medium_text" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/request_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="@string/request_otp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/enter_otp"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/medium_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:weightSum="1">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="5dp"
                    android:digits="0123456789"
                    android:layout_weight="0.16"
                    android:background="@drawable/rounded_grey_border"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:lines="1"
                    android:maxLength="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="5dp"
                    android:layout_weight="0.16"
                    android:background="@drawable/rounded_grey_border"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:lines="1"
                    android:maxLength="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="5dp"
                    android:layout_weight="0.16"
                    android:background="@drawable/rounded_grey_border"
                    android:gravity="center"
                    android:digits="0123456789"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:lines="1"
                    android:maxLength="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin4"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="5dp"
                    android:layout_weight="0.16"
                    android:background="@drawable/rounded_grey_border"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:digits="0123456789"
                    android:inputType="numberPassword"
                    android:lines="1"
                    android:maxLength="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin5"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="5dp"
                    android:layout_weight="0.16"
                    android:background="@drawable/rounded_grey_border"
                    android:gravity="center"
                    android:hint="0"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:digits="0123456789"
                    android:lines="1"
                    android:maxLength="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin6"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_margin="5dp"
                    android:layout_weight="0.16"
                    android:background="@drawable/rounded_grey_border"
                    android:gravity="center"
                    android:hint="0"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword"
                    android:lines="1"
                    android:maxLength="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

            </LinearLayout>

            <Button
                android:id="@+id/otp_submit"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

        <!--Email layout-->
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/enter_details"
                android:textColor="@color/hint_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColorHint="@android:color/darker_gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColor="@color/app_text"
                    android:textSize="@dimen/medium_text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_submit"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

        <!--New Password layout-->
        <LinearLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/reset_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="10"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/medium_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="10"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/medium_text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/password_submit"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_primary_color_bg"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/my_progress_indeterminate"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/loading"
                android:textColor="@color/app_text"
                android:textSize="@dimen/medium_text" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>